--- a/Find1/Views/Ads/Delete.cshtml
+++ b/Find1/Views/Ads/Delete.cshtml
@@ -12,7 +12,9 @@
     <hr />
 
     <figure class="figure">
-        <img src="~/images/@Model.ProfilePicture" class="figure-img img-fluid rounded" alt="...">
+        <img src="~/images/@Model.ProfilePicture" class="figure-img img-fluid rounded" alt="..."
+             
+             >
 
     </figure>
     <dl class="row">
