--- a/Find1/Views/Home/Index.cshtml
+++ b/Find1/Views/Home/Index.cshtml
@@ -17,8 +17,8 @@
         @foreach (var ad in Model)
         {
         <tr>
-            
-            <td style="width: 300px;">
+
+            <td style="width: 300px; border:0px;">
                 <img src="~/images/@ad.ProfilePicture"
                      class="rounded-0"
                      height="150" width="200"
@@ -29,11 +29,15 @@
                 <a asp-action="Details" asp-route-id="@ad.Id">
                     <h4>@ad.Title</h4>
                 </a>
-                    Rs @ad.Price <br>
-                    @ad.Location
-</td>
+                Rs @ad.Price <br>
+                @ad.Location
+            </td>
+            <td>
+                
+                Posted in @ad.Datetime
+            </td>
 
-            
+
         </tr>
 
         }
