--- a/Find1/Views/Shared/_Layout.cshtml
+++ b/Find1/Views/Shared/_Layout.cshtml
@@ -21,14 +21,12 @@
                 <li class="active">
                     <a asp-area="" asp-controller="Home" asp-action="Index"><span class="fa fa-home"></span> Home</a>
                 </li>
+                
+                <li>
+                    <a asp-area="" asp-controller="Home" asp-action="Adfilter"><span class="fa fa-filter"></span> Ads filter</a>
+                </li>
                 <li>
                     <a href="#"><span class="fa fa-user"></span> About</a>
-                </li>
-                <li>
-                    <a href="#"><span class="fa fa-sticky-note"></span> Blog</a>
-                </li>
-                <li>
-                    <a href="#"><span class="fa fa-cogs"></span> Services</a>
                 </li>
                 <li>
                     <a href="#"><span class="fa fa-paper-plane"></span> Contacts</a>
@@ -36,10 +34,7 @@
             </ul>
 
             <div class="footer">
-                <p>
-                    Copyright &copy;
-                    <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib.com</a>
-                </p>
+                
             </div>
         </nav>
 
