--- a/Find1/Views/Ads/Details.cshtml
+++ b/Find1/Views/Ads/Details.cshtml
@@ -64,6 +64,13 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Datetime)
         </dd>
+
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Disription)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Disription)
+        </dd>
     </dl>
 </div>
 <div>
