--- a/Find1/Views/Ads/Index.cshtml
+++ b/Find1/Views/Ads/Index.cshtml
@@ -7,6 +7,7 @@
 <head>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">s
 
 </head>
 <h1>Index</h1>
@@ -14,7 +15,7 @@
 <h4 class="text-center text-uppercase">My Advertiesmens</h4>
 
 <p>
-    <a asp-action="Create" class="btn btn-outline-primary text-uppercase"><i class="fas fa-plus-circle"></i> Add New</a>
+    <a asp-action="Create" class="btn btn-outline-primary text-uppercase"><i class="fa fa-plus-circle"></i> Add New</a>
 </p>
 <table class="table table-bordered">
     <thead>
@@ -40,7 +41,7 @@
             </td>
             <td>@ad.Title</td>
             <td>@ad.Category.Name</td>
-            <td>@ad.Price]</td>
+            <td>@ad.Price</td>
             <td>@ad.Datetime</td>
             <td>
                 <a asp-action="Details" asp-route-id="@ad.Id">Details</a>
