--- a/Find1/Views/Home/Details.cshtml
+++ b/Find1/Views/Home/Details.cshtml
@@ -10,16 +10,14 @@
     <h4>Ad</h4>
     <hr />
     <figure class="figure">
-        <img src="~/images/@Model.ProfilePicture" class="rounded-0"
-                     height="400" width="400"
+        <img src="~/images/@Model.ProfilePicture" class="rounded-1"
+                 
                      asp-append-version="true">
        
     </figure>
 
     <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ProfilePicture)
-        </dt>
+
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ProfilePicture)
         </dd>
@@ -65,6 +63,12 @@
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Datetime)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Disription)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Disription)
         </dd>
     </dl>
 </div>
